# MODO-S1

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  generate_dpo.py  prepare_data.py  pyproject.toml  requirements.txt  server.py  test_api.py  train.py  train_dpo.py  train_lora.py
.github/workflows/: ci.yml
